Need help with pandas

--- a/databases-and-py.ipynb
+++ b/databases-and-py.ipynb
@@ -2,12 +2,12 @@
     "metadata": {
         "kernelspec": {
             "name": "python3",
-            "display_name": "Python 3",
+            "display_name": "Python 3 (ipykernel)",
             "language": "python"
         },
         "language_info": {
             "name": "python",
-            "version": "3.8.8",
+            "version": "3.9.12",
             "mimetype": "text/x-python",
             "codemirror_mode": {
                 "name": "ipython",
@@ -50,14 +50,17 @@
             "cell_type": "code",
             "source": [
                 "# Import sqlite3 and pandas.\n",
+                "import pandas as pd\n",
+                "import sqlite3 as sl\n",
                 ""
             ],
             "metadata": {
                 "azdata_cell_guid": "865655b0-22e9-47f4-a5df-4bfe97dda4a3",
-                "tags": []
+                "tags": [],
+                "language": "python"
             },
             "outputs": [],
-            "execution_count": 15
+            "execution_count": 3
         },
         {
             "cell_type": "markdown",
@@ -74,13 +77,14 @@
             "cell_type": "code",
             "source": [
                 "# Create a new database called exercises.db.\n",
-                ""
+                "con = sl.connect('exercises.db')"
             ],
             "metadata": {
-                "azdata_cell_guid": "707abc33-c6ee-416e-9358-c799f1fcbb12"
+                "azdata_cell_guid": "707abc33-c6ee-416e-9358-c799f1fcbb12",
+                "language": "python"
             },
             "outputs": [],
-            "execution_count": 16
+            "execution_count": 4
         },
         {
             "cell_type": "markdown",
@@ -98,13 +102,22 @@
             "cell_type": "code",
             "source": [
                 "# Create a new table in your database.\n",
-                ""
+                "with con:\n",
+                "    con.execute(\"\"\"\n",
+                "        CREATE TABLE favorite_books1 (\n",
+                "            title STR,\n",
+                "            author STR,\n",
+                "            description STR\n",
+                "        );\n",
+                "        \"\"\")"
             ],
             "metadata": {
-                "azdata_cell_guid": "3cc6b80e-3fa2-4d2e-b2a9-1ea5d68ba01e"
+                "azdata_cell_guid": "3cc6b80e-3fa2-4d2e-b2a9-1ea5d68ba01e",
+                "language": "python",
+                "tags": []
             },
             "outputs": [],
-            "execution_count": 17
+            "execution_count": 6
         },
         {
             "cell_type": "markdown",
@@ -121,13 +134,21 @@
             "cell_type": "code",
             "source": [
                 "# Add your 3 favorite books to your table.\n",
+                "sql = 'INSERT INTO favorite_books1 (title, author, description) values(?,?,?)'\n",
+                "data = [\n",
+                "    ('A Little Princess', 'Frances Hodgson Burnett', 'A little girl dreams of her life changing.' ),\n",
+                "    ('Ella Enchanted', 'Gail Carson Levine', 'A cursed daughter tries to disobey'),\n",
+                "    ('American Gods', 'Neil Gaiman', \"A man's life changes after he leaves prison.\")\n",
+                "]\n",
                 ""
             ],
             "metadata": {
-                "azdata_cell_guid": "c7b8e386-f3f4-42ad-aa91-a2da2e7904a5"
+                "azdata_cell_guid": "c7b8e386-f3f4-42ad-aa91-a2da2e7904a5",
+                "language": "python",
+                "tags": []
             },
             "outputs": [],
-            "execution_count": 18
+            "execution_count": 7
         },
         {
             "cell_type": "markdown",
@@ -145,14 +166,19 @@
             "cell_type": "code",
             "source": [
                 "# Write your SELECT query here.\n",
+                "with con:\n",
+                "    data = con.execute (\"SELECT * FROM favorite_books1;\")\n",
+                "    for row in data:\n",
+                "        print(row)\n",
                 ""
             ],
             "metadata": {
                 "azdata_cell_guid": "c341e7e2-d635-4c26-b744-237c762f7f41",
-                "tags": []
+                "tags": [],
+                "language": "python"
             },
             "outputs": [],
-            "execution_count": 19
+            "execution_count": 8
         },
         {
             "cell_type": "markdown",
@@ -169,13 +195,84 @@
             "cell_type": "code",
             "source": [
                 "# Use Pandas to make a new table in your database.\n",
+                "with con:\n",
+                "    con.execute(\"\"\"\n",
+                "        CREATE TABLE favorite_movies (\n",
+                "            title STR,\n",
+                "            id INT\n",
+                "        );\n",
+                "        \"\"\")"
+            ],
+            "metadata": {
+                "azdata_cell_guid": "b4b6dd20-ccc0-42e7-b1e7-79d8596b3f9c",
+                "language": "python",
+                "tags": [
+                    "hide_input"
+                ]
+            },
+            "outputs": [],
+            "execution_count": 26
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "favorite_movies = pd.DataFrame({\n",
+                "    'movie_id':[1,2,3],\n",
+                "    'movie__title':['High Fidelity','Ant-Man','A Little Princess']\n",
+                "})\n",
                 ""
             ],
             "metadata": {
-                "azdata_cell_guid": "b4b6dd20-ccc0-42e7-b1e7-79d8596b3f9c"
+                "azdata_cell_guid": "72e67fbf-30dc-43b7-8f09-486a6adf2566",
+                "language": "python",
+                "tags": [
+                    "hide_input"
+                ]
             },
             "outputs": [],
+            "execution_count": 18
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "df = pd.read_sql(\"\"\"\n",
+                "SELECT * FROM favorite_movies\n",
+                "\"\"\", con)\n",
+                "df\n",
+                ""
+            ],
+            "metadata": {
+                "azdata_cell_guid": "d186baf9-369b-4821-862e-a6a460c835bb",
+                "language": "python",
+                "tags": []
+            },
+            "outputs": [
+                {
+                    "data": {
+                        "text/plain": "Empty DataFrame\nColumns: [title, id]\nIndex: []",
+                        "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>title</th>\n      <th>id</th>\n    </tr>\n  </thead>\n  <tbody>\n  </tbody>\n</table>\n</div>"
+                    },
+                    "metadata": {},
+                    "execution_count": 20,
+                    "output_type": "execute_result"
+                }
+            ],
             "execution_count": 20
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "with con:\n",
+                "    data = con.execute (\"SELECT * FROM favorite_movies;\")\n",
+                "    for row in data:\n",
+                "        print(row)"
+            ],
+            "metadata": {
+                "azdata_cell_guid": "ccda189d-e574-4aa7-9dc0-4d3cfdcec78f",
+                "language": "python"
+            },
+            "outputs": [],
+            "execution_count": 21
         }
     ]
 }
